// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitlab snapshot 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

stages:
  - synth
  - publish_assets
  - dev
  - prod
.artifacts_cdk:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Assembly - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk.out
.artifacts_cdkdeploy:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Outputs - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk-outputs-*.json
.aws_base:
  image:
    name: \\"image: jsii/superchain:1-buster-slim-node18\\"
  id_tokens:
    AWS_TOKEN:
      aud: https://sts.amazonaws.com
  variables:
    CI: \\"true\\"
  before_script:
    - |
      check_variables_defined() {
        for var in \\"$@\\"; do
          if [ -z \\"$(eval \\"echo \\\\$$var\\")\\" ]; then
            log_fatal \\"\${var} not defined\\";
          fi
        done
      }

      awslogin() {
        roleArn=\${1: -\${AWS_ROLE_ARN}}
        check_variables_defined roleArn AWS_TOKEN
        export $(printf \\"AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s\\" $(aws sts assume-role-with-web-identity --role-arn \${roleArn} --role-session-name \\"GitLabRunner-\${CI_PROJECT_ID}-\${CI_PIPELINE_ID}\\" --web-identity-token \${AWS_TOKEN} --duration-seconds 3600 --query 'Credentials.[AccessKeyId,SecretAccessKey,SessionToken]' --output text))
        # TODO CODE ARTIFACT
      }
synth:
  extends:
    - .aws_base
    - .artifacts_cdk
  stage: synth
  script:
    - echo \\"Running CDK synth\\"
    - awslogin 'synthRole'
    - npx projen install:ci
    - npx projen build
publish_assets:
  extends:
    - .aws_base
  stage: publish_assets
  needs:
    - job: synth
      artifacts: true
  script:
    - echo \\"Publish assets to AWS\\"
    - awslogin 'publishRole'
    - npx projen install:ci
    - npx projen publish:assets
diff-dev:
  extends:
    - .aws_base
  stage: dev
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen diff:dev
deploy-dev:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: dev
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-dev
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen deploy:dev
diff-prod:
  extends:
    - .aws_base
  stage: prod
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen diff:prod
deploy-prod:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: prod
  when: manual
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-prod
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen deploy:prod
"
`;

exports[`Gitlab snapshot 2`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "dependencies": Object {
    "aws-cdk-lib": "^2.102.0",
    "constructs": "^10.0.5",
  },
  "devDependencies": Object {
    "@types/jest": "*",
    "@types/node": "^18",
    "@types/standard-version": "*",
    "@typescript-eslint/eslint-plugin": "^6",
    "@typescript-eslint/parser": "^6",
    "aws-cdk": "^2.102.0",
    "cdk-assets": "*",
    "esbuild": "*",
    "eslint": "^8",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "jest": "*",
    "jest-junit": "^15",
    "projen": "*",
    "standard-version": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": Object {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": Array [
      "/node_modules/",
    ],
    "coverageReporters": Array [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": Array [
      "default",
      Array [
        "jest-junit",
        Object {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": Array [
      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)",
    ],
    "testPathIgnorePatterns": Array [
      "/node_modules/",
    ],
    "transform": Object {
      "^.+\\\\.[t]sx?$": Array [
        "ts-jest",
        Object {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": Array [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "testapp",
  "scripts": Object {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "bundle": "npx projen bundle",
    "clobber": "npx projen clobber",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy:dev": "npx projen deploy:dev",
    "deploy:prod": "npx projen deploy:prod",
    "diff:dev": "npx projen diff:dev",
    "diff:prod": "npx projen diff:prod",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "publish:assets": "npx projen publish:assets",
    "release:push-assembly": "npx projen release:push-assembly",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
  },
  "version": "0.0.0",
}
`;

exports[`Gitlab snapshot with runner default tags 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

stages:
  - synth
  - publish_assets
  - dev
  - prod
.artifacts_cdk:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Assembly - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk.out
.artifacts_cdkdeploy:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Outputs - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk-outputs-*.json
.aws_base:
  image:
    name: \\"image: jsii/superchain:1-buster-slim-node18\\"
  id_tokens:
    AWS_TOKEN:
      aud: https://sts.amazonaws.com
  variables:
    CI: \\"true\\"
  before_script:
    - |
      check_variables_defined() {
        for var in \\"$@\\"; do
          if [ -z \\"$(eval \\"echo \\\\$$var\\")\\" ]; then
            log_fatal \\"\${var} not defined\\";
          fi
        done
      }

      awslogin() {
        roleArn=\${1: -\${AWS_ROLE_ARN}}
        check_variables_defined roleArn AWS_TOKEN
        export $(printf \\"AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s\\" $(aws sts assume-role-with-web-identity --role-arn \${roleArn} --role-session-name \\"GitLabRunner-\${CI_PROJECT_ID}-\${CI_PIPELINE_ID}\\" --web-identity-token \${AWS_TOKEN} --duration-seconds 3600 --query 'Credentials.[AccessKeyId,SecretAccessKey,SessionToken]' --output text))
        # TODO CODE ARTIFACT
      }
synth:
  extends:
    - .aws_base
    - .artifacts_cdk
  stage: synth
  tags:
    - defaultTag
  script:
    - echo \\"Running CDK synth\\"
    - awslogin 'synthRole'
    - npx projen install:ci
    - npx projen build
publish_assets:
  extends:
    - .aws_base
  stage: publish_assets
  tags:
    - defaultTag
  needs:
    - job: synth
      artifacts: true
  script:
    - echo \\"Publish assets to AWS\\"
    - awslogin 'publishRole'
    - npx projen install:ci
    - npx projen publish:assets
diff-dev:
  extends:
    - .aws_base
  stage: dev
  tags:
    - defaultTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen diff:dev
deploy-dev:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: dev
  tags:
    - defaultTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-dev
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen deploy:dev
diff-prod:
  extends:
    - .aws_base
  stage: prod
  tags:
    - defaultTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen diff:prod
deploy-prod:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: prod
  tags:
    - defaultTag
  when: manual
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-prod
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen deploy:prod
"
`;

exports[`Gitlab snapshot with runner tags 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

stages:
  - synth
  - publish_assets
  - dev
  - prod
.artifacts_cdk:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Assembly - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk.out
.artifacts_cdkdeploy:
  artifacts:
    when: on_success
    expire_in: 30 days
    name: CDK Outputs - $CI_JOB_NAME-$CI_COMMIT_REF_SLUG
    untracked: false
    paths:
      - cdk-outputs-*.json
.aws_base:
  image:
    name: \\"image: jsii/superchain:1-buster-slim-node18\\"
  id_tokens:
    AWS_TOKEN:
      aud: https://sts.amazonaws.com
  variables:
    CI: \\"true\\"
  before_script:
    - |
      check_variables_defined() {
        for var in \\"$@\\"; do
          if [ -z \\"$(eval \\"echo \\\\$$var\\")\\" ]; then
            log_fatal \\"\${var} not defined\\";
          fi
        done
      }

      awslogin() {
        roleArn=\${1: -\${AWS_ROLE_ARN}}
        check_variables_defined roleArn AWS_TOKEN
        export $(printf \\"AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s\\" $(aws sts assume-role-with-web-identity --role-arn \${roleArn} --role-session-name \\"GitLabRunner-\${CI_PROJECT_ID}-\${CI_PIPELINE_ID}\\" --web-identity-token \${AWS_TOKEN} --duration-seconds 3600 --query 'Credentials.[AccessKeyId,SecretAccessKey,SessionToken]' --output text))
        # TODO CODE ARTIFACT
      }
synth:
  extends:
    - .aws_base
    - .artifacts_cdk
  stage: synth
  tags:
    - synthTag
  script:
    - echo \\"Running CDK synth\\"
    - awslogin 'synthRole'
    - npx projen install:ci
    - npx projen build
publish_assets:
  extends:
    - .aws_base
  stage: publish_assets
  tags:
    - assetTag
  needs:
    - job: synth
      artifacts: true
  script:
    - echo \\"Publish assets to AWS\\"
    - awslogin 'publishRole'
    - npx projen install:ci
    - npx projen publish:assets
diff-dev:
  extends:
    - .aws_base
  stage: dev
  tags:
    - devDiffTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen diff:dev
deploy-dev:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: dev
  tags:
    - devTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-dev
  script:
    - awslogin 'devRole'
    - npx projen install:ci
    - npx projen deploy:dev
diff-prod:
  extends:
    - .aws_base
  stage: prod
  tags:
    - prodTag
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen diff:prod
deploy-prod:
  extends:
    - .aws_base
    - .artifacts_cdkdeploy
  stage: prod
  tags:
    - prodTag
  when: manual
  only:
    refs:
      - main
  needs:
    - job: synth
      artifacts: true
    - job: publish_assets
    - job: diff-prod
  script:
    - awslogin 'prodRole'
    - npx projen install:ci
    - npx projen deploy:prod
"
`;
